--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,33 @@
 /* All styles for your header Components live here */
+.MainContainer {
+    width: 100%;
+    height: 150px;
+    /* border: 2px solid grey; */
+    display:flex;
+    justify-content: center;
+}
+
+.MainContainer .HeaderContainer {
+    width: 50%;
+    height: 100%;
+    border:1px solid lightgrey;
+    display: flex;
+}
+.MainContainer .HeaderContainer .LogoImg{
+width:100px;
+height:100px;
+/* border:2px solid black; */
+}
+.MainContainer .HeaderContainer .LogoImg img{
+height:100px;
+width:100px;
+}
+.MainContainer .HeaderContainer .ContentMain{
+width:100%;
+height:100%;
+
+line-height:-1;
+}
+.MainContainer .HeaderContainer .ContentMain span{
+font-weight:200;
+}
