--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -7,7 +7,7 @@ display: flex;
 justify-content:center;
 }
 .MainCardContainer .CardContainer{
-height:75%;
+height:73%;
 width:50%;
 border:1px solid lightgray;
 display:flex;
@@ -27,4 +27,5 @@ margin-left:100px;
 }
 a{
     text-decoration: none;
+    color:gray;
 }
