--- a/Project-II-Calculator/calculator/src/less/Button.less
+++ b/Project-II-Calculator/calculator/src/less/Button.less
@@ -1,5 +1,34 @@
 .Action_Button{
-    width:350px;
+    width:275px;
     height:100px;
-    border:2px solid red;
+    border:2px solid lightgrey;
+    display:flex;
+    justify-content: center;
+    align-content: center; 
+    background-color: white;
+    
+    p{
+        padding-top:0;
+        font-size:26pt;
+        color:rgb(83, 74, 74);
+        font-family: sans-serif;
+    }
 }
+.Math_buttons{
+            width:120px;
+            height:545px;
+            // border:2px solid black;
+            display:flex;
+            flex-direction: column;
+            .Math{
+                height:100px;
+                width:128px;
+                background-color:rgb(117, 10, 10);
+                border:1px solid lightgrey;
+            i{
+                font-size:24pt;
+                color:white;
+            }
+            }
+
+        }
