--- a/Project-II-Calculator/calculator/src/less/Display.css
+++ b/Project-II-Calculator/calculator/src/less/Display.css
@@ -15,16 +15,14 @@
   display: flex;
   width: 100%;
   height: 100px;
-  border: 2px solid blue;
 }
-.Main_Container .Action_Math_Container .ActionButton {
+.Main_Container .Action_Math_Container .ActionButtonContainer {
   width: 275px;
   height: 100px;
 }
 .Main_Container .Action_Math_Container .Math_Container {
   width: 120px;
   height: 545px;
-  border: 2px solid black;
   display: flex;
   flex-direction: column;
 }
