--- a/Project-II-Calculator/calculator/src/less/Display.less
+++ b/Project-II-Calculator/calculator/src/less/Display.less
@@ -16,18 +16,21 @@
         display: flex;
         width:100%;
         height:100px;
-        border:2px solid blue;
+        // border:2px solid blue;
         
-        .ActionButton{
+        .ActionButtonContainer{
             width:275px;
             height:100px;
             // border:2px solid blue;
+           
+            
+            
             
         }
         .Math_Container{
             width:120px;
             height:545px;
-            border:2px solid black;
+            // border:1px solid lightgrey;
             display:flex;
             flex-direction: column;
         }
