--- a/Project-II-Calculator/calculator/src/less/Display.less
+++ b/Project-II-Calculator/calculator/src/less/Display.less
@@ -28,16 +28,16 @@
             
         }
         .Math_Container{
-            width:120px;
-            height:545px;
-            // border:1px solid lightgrey;
+            width:130px;
+            height:500px;
+            border:1px solid lightgrey;
             display:flex;
             flex-direction: column;
         }
         }
         .NumberButtonContainer{
-            width:277px;
-            height:340px;
+            width:280px;
+            height:298px;
             // border:2px solid red;
             display:flex;
             flex-wrap: wrap;
