--- a/Project-II-Calculator/calculator/src/less/Button.less
+++ b/Project-II-Calculator/calculator/src/less/Button.less
@@ -32,3 +32,18 @@
             }
 
         }
+        .Number_Container{
+            width:280px;
+            height:298px;
+            // border:2px solid red;
+            display:flex;
+            flex-wrap: wrap;
+        .Math{
+            width:91px;
+            height:100px;
+            border:1px solid lightgrey;
+            font-size:20pt;
+            background-color: white;
+            }
+
+        }        
