--- a/Project-II-Calculator/calculator/src/less/Display.less
+++ b/Project-II-Calculator/calculator/src/less/Display.less
@@ -1,7 +1,7 @@
 .Main_Container{
     width:100%;
     height:1000px;
-    border:2px solid blue;
+    // border:2px solid blue;
     display: flex;
     flex-direction: column;
     justify-content: center;
