--- a/Project-II-Calculator/calculator/src/less/Button.less
+++ b/Project-II-Calculator/calculator/src/less/Button.less
@@ -1,11 +1,15 @@
 .Action_Button{
     width:275px;
-    height:100px;
+    height:103px;
     border:2px solid lightgrey;
     display:flex;
     justify-content: center;
     align-content: center; 
     background-color: white;
+    padding-top:0;
+    font-size:26pt;
+    color:rgb(83, 74, 74);
+    font-family: sans-serif;
     
     p{
         padding-top:0;
